# dynamic-dpo-v5

./: README.md  pyproject.toml  setup.py
.github/workflows/: quality.yml  tests.yml
scripts/: dpo.py
